--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service lint --fix && vue-cli-service serve ",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "./node_modules/.bin/vue-cli-service lint --fix"
   },
   "dependencies": {
     "@prismicio/vue": "^2.0.7",
-    "buefy": "^0.9.3",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "prismic-dom": "^2.2.4",
     "prismic-javascript": "^3.0.2",
+    "serve": "^11.3.2",
     "vue": "^2.6.11",
     "vue-disqus": "^4.0.1",
     "vue-router": "^3.2.0",
