--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "./node_modules/.bin/vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@prismicio/vue": "^2.0.7",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
