--- a/package.json
+++ b/package.json
@@ -1,43 +1,24 @@
 {
   "name": "deivihertz",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "My astonishing Nuxt.js project",
+  "author": "msweeneydev",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service lint --fix && vue-cli-service serve ",
-    "build": "vue-cli-service build",
-    "lint": "./node_modules/.bin/vue-cli-service lint --fix"
+    "dev": "nuxt",
+    "build": "nuxt generate",
+    "start": "nuxt start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@prismicio/vue": "^2.0.7",
-    "bootstrap": "^4.6.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
-    "moment": "^2.29.1",
-    "prismic-dom": "^2.2.4",
-    "prismic-javascript": "^3.0.2",
-    "serve": "^11.3.2",
-    "vue": "^2.6.11",
-    "vue-disqus": "^4.0.1",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.0",
-    "@vue/cli-plugin-eslint": "^4.5.0",
-    "@vue/cli-service": "^4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^1.19.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.12"
+    "fibers": "^5.0.0",
+    "node-sass": "^5.0.0",
+    "nodemon": "^2.0.7",
+    "sass": "^1.32.8",
+    "sass-loader": "10"
   }
 }
