--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@nuxt/content": "^1.13.1",
     "@nuxtjs/style-resources": "^1.0.0",
     "bootstrap-vue": "^2.21.2",
+    "moment": "^2.29.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
