--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue": "^2.21.2",
     "moment": "^2.29.1",
     "nuxt": "^2.15.0",
-    "nuxt-font-loader-strategy": "^1.1.9"
+    "nuxt-font-loader-strategy": "^1.1.9",
+    "vue-lazy-hydration": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
