--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "nuxt": "^2.15.0",
     "nuxt-font-loader-strategy": "^1.1.9",
+    "sqip-loader": "^1.0.0",
     "vue-lazy-hydration": "^2.0.0-beta.4"
   },
   "devDependencies": {
