--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "bootstrap-vue": "^2.21.2",
     "moment": "^2.29.1",
     "nuxt": "^2.15.0",
+    "vue-lazy-hydration": "^2.0.0-beta.4",
     "nuxt-font-loader-strategy": "^1.1.9",
     "responsive-loader": "^2.3.0",
-    "vue-lazy-hydration": "^2.0.0-beta.4"
-  },
-  "devDependencies": {
-    "@nuxt/content": "^1.13.1",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "@aceforth/nuxt-optimized-images": "^1.4.0",
-    "fibers": "^5.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "sqip-loader": "^1.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^9.0.0",
+    "@nuxt/content": "^1.13.1",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@aceforth/nuxt-optimized-images": "^1.4.0",
+  },
+  "devDependencies": {
+
+    "fibers": "^5.0.0",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "sass": "^1.32.8",
