--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "imagemin-svgo": "^9.0.0",
     "@nuxt/content": "^1.13.1",
     "@nuxtjs/style-resources": "^1.0.0",
-    "@aceforth/nuxt-optimized-images": "^1.4.0",
+    "@aceforth/nuxt-optimized-images": "^1.4.0"
   },
   "devDependencies": {
 
