--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@nuxt/content-theme-docs": "^0.10.2",
     "bootstrap-vue": "^2.21.2",
     "moment": "^2.29.1",
-    "nuxt": "^2.15.0"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@nuxt/content": "^1.13.1",
